<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        style="@style/home_screen_title_text_style"
        android:text="@string/playlist_activity_header_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/playlist_activity_missing_playlist_text_style"
            android:text="@string/playlist_activity_missing_playlist" />

        <TextView
            style="@style/playlist_activity_new_playlist_button_style"
            android:text="@string/playlist_activity_new_playlist" />
    </LinearLayout>

    <TextView
        style="@style/purpose_text_style"
        android:text="@string/playlist_activity_purpose_text" />
</LinearLayout>