<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/activity_title_text_style"
            android:text="@string/songs_activity_header_title" />

        <Button
            style="@style/shuffle_button_style"
            android:text="@string/header_shuffle_button_text" />
    </LinearLayout>

    <TextView
        style="@style/purpose_text_style"
        android:text="@string/songs_activity_purpose_text" />
</LinearLayout>